--- a/mlops/presenters/overview/dashboard/block_layout.yaml
+++ b/mlops/presenters/overview/dashboard/block_layout.yaml
@@ -13,6 +13,7 @@ blocks:
       type: chart_code
     error: null
     name: Distribution of performance metrics
+    name_new: Distribution of performance metrics
     skip_render: false
     type: chart
     uuid: distribution_of_performance_metrics
@@ -32,15 +33,15 @@ blocks:
     configuration:
       chart_type: time series bar chart
       group_by:
-      - start_time
+      - start_time_seconds
       metrics:
       - aggregation: average
         column: mse_Booster
       - aggregation: average
-        column: mse_LinearRegression
-      - aggregation: average
         column: mse_Lasso
-      time_interval: hour
+      - aggregation: average
+        column: mse_LinearRegression
+      time_interval: minute
       x_axis_label_format: hh
     data_source:
       type: chart_code
@@ -58,13 +59,14 @@ blocks:
       - model
       metrics:
       - aggregation: count_distinct
-        column: run_uuid
+        column: run_id
       y_sort_order: descending
       y_tooltip_label_format: return `${value} total runs`
     data_source:
       type: chart_code
     error: null
     name: Total runs by model
+    name_new: Total runs by model
     skip_render: false
     type: chart
     uuid: total_runs_by_model
@@ -74,22 +76,22 @@ blocks:
       design:
         x_grid_lines_hidden: true
         y_grid_lines_hidden: true
-        y_values_smooth: true
+        y_values_smooth: false
       group_by:
-      - start_time
+      - start_time_seconds
       metrics:
       - aggregation: average
         column: rmse_Booster
       - aggregation: average
-        column: rmse_LinearRegression
-      - aggregation: average
         column: rmse_Lasso
+      - aggregation: average
+        column: rmse_LinearRegression
       time_interval: minute
       x_axis_label_format: h:mm
       x_grid_lines_hidden: true
       y_axis_label_format: return parseFloat(value).toFixed(3)
       y_grid_lines_hidden: true
-      y_values_smooth: true
+      y_values_smooth: false
     data_source:
       type: chart_code
     error: null
