--- a/mlops/presenters/pipelines/sklearn_training/dashboard/block_layout.yaml
+++ b/mlops/presenters/pipelines/sklearn_training/dashboard/block_layout.yaml
@@ -33,6 +33,10 @@ blocks:
     name: Failed pipeline runs daily
     type: chart
     uuid: failed_pipeline_runs_daily_sklearn_training_v0
+  joyful_night:
+    name: joyful night
+    type: chart
+    uuid: joyful_night
   pipeline_run_status_sklearn_training_g6:
     configuration:
       chart_style: horizontal
@@ -122,4 +126,6 @@ layout:
 - - block_uuid: failed_pipeline_runs_daily_sklearn_training_v0
     width: 1
 - - block_uuid: elemental_glacier
+    width: 1
+- - block_uuid: joyful_night
     width: 1
