--- a/mlops/presenters/pipelines/xgboost_training/dashboard/block_layout.yaml
+++ b/mlops/presenters/pipelines/xgboost_training/dashboard/block_layout.yaml
@@ -1,18 +1,4 @@
 blocks:
-  shap_values:
-    configuration:
-      chart_type: custom
-    data_source:
-      block_uuid: dashboard_data_source
-      pipeline_schedule_id: null
-      pipeline_uuid: xgboost_training
-      type: block
-    error: null
-    name: SHAP values
-    name_new: SHAP values
-    skip_render: false
-    type: chart
-    uuid: shap_values
   shap_values_bar:
     configuration:
       chart_type: custom
@@ -40,11 +26,24 @@ blocks:
     skip_render: false
     type: chart
     uuid: shap_values_force_chart
+  shap_values_my:
+    configuration:
+      chart_type: custom
+    data_source:
+      block_uuid: dashboard_data_source
+      pipeline_schedule_id: null
+      pipeline_uuid: xgboost_training
+      type: block
+    error: null
+    name: SHAP VALUES MY
+    name_new: SHAP VALUES MY
+    skip_render: false
+    type: chart
+    uuid: shap_values_my
 layout:
-- - block_uuid: shap_values_bar
-    height: 400
+- - block_uuid: shap_values_my
     width: 1
-  - block_uuid: shap_values
+  - block_uuid: shap_values_bar
     height: 400
     width: 1
 - - block_uuid: shap_values_force_chart
